create aside section

--- a/src/app/products/components/all-products/all-products.component.html
+++ b/src/app/products/components/all-products/all-products.component.html
@@ -1,22 +1,33 @@
 <app-carousel></app-carousel>
 
 <div class="container pb-5">
-    <div class="content">
-        <div class="categories w-25">
-            <select class="form-control" (change)="filteringProducts($event)">
-                <option value="all">All</option>
-                <option *ngFor="let cate of cateNames" [value]="cate">{{cate}}</option>
-            </select>
-        </div>
-        <div class="row" *ngIf="!isLoading">
-            <div class="col-sm-12 col-md-6 col-xl-4 col-xxl-3 d-flex g-5" *ngFor="let product of allProducts">
-                    <app-product [data]="product" (item)="addToCart($event)"></app-product>
+    <div class="content d-flex">
+        <aside class=" w-25">
+            <div class="categories">
+                <select class="form-control" (change)="filteringProducts($event)">
+                    <option value="all">All</option>
+                    <option *ngFor="let cate of cateNames" [value]="cate">{{cate}}</option>
+                </select>
             </div>
+
+            <app-aside></app-aside>
+        </aside>
+        <div class="all-products w-75 ms-5">
+            <div class="row" *ngIf="!isLoading">
+                <div class="col-sm-12 col-md-6 col-xl-4 d-flex g-5" *ngFor="let product of allProducts">
+                        <app-product data-aos="zoom-in"  [data]="product" (item)="addToCart($event)"></app-product>
+                </div>
+            </div>
+            
+            <div class="text-center">
+                <app-spinner *ngIf="isLoading"></app-spinner>
+              </div>
         </div>
+
+        
     </div>
 
 
-    <div class="text-center">
-      <app-spinner *ngIf="isLoading"></app-spinner>
-    </div>
+
 </div>
+
