--- a/src/app/products/components/product/product.component.scss
+++ b/src/app/products/components/product/product.component.scss
@@ -25,6 +25,7 @@ $main-color: rgb(12, 182, 139);
              color: white;
              height: 40px;
              overflow: hidden;
+             font-size: 22px;
          }
          p{
              margin: 5px;
