--- a/src/app/products/components/product/product.component.html
+++ b/src/app/products/components/product/product.component.html
@@ -1,7 +1,9 @@
 <div class="item">
-    <div  routerLink="/details/{{data.id}}">
-        <img [src]="data.image" class="w-100 mb-3" alt="">
+    <div routerLink="/details/{{data.id}}">
+<div class="text-center">
+    <img [src]="data.image" class="w-75 mb-3" alt="">
 
+</div>
     <div class="body">
         <h4 class="text-center">{{data.title | minimizeDesc:3}}</h4>
         <p>{{data.description | minimizeDesc:15}} ...</p>
