--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -7,7 +7,8 @@
 
             <ul>
                 <li><a routerLink="/">Products</a></li>
-                <li><a routerLink="/cart">Carts</a></li>
+                <li><a routerLink="/cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                <li><a routerLink="/cart"><i class="fa-solid fa-heart"></i></a></li>
             </ul>
         </div>
     </div>
