--- a/src/app/products/components/products-details/products-details.component.scss
+++ b/src/app/products/components/products-details/products-details.component.scss
@@ -1,5 +1,5 @@
-$transition: 0.4s all ease;
-$main-color: rgb(12, 182, 139);
+@use '../../../shared/styles/_variables.scss' as *;
+
 
 
 .rate {
@@ -27,5 +27,12 @@ $main-color: rgb(12, 182, 139);
     span {
         color: $main-color;
         margin-right: 10px;
+    }
+}
+
+.product-details {
+    img{
+        height: 300px;
+        width: 200px;
     }
 }
