--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -2,7 +2,7 @@
 
     <div class="footer-nav">
 
-      <div class="container d-flex justify-content-between">
+      <div class="container d-flex justify-content-between flex-wrap">
 
         <ul class="footer-nav-list">
 
