--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav>
+<!-- <nav>
     <div class="container">
         <div class="content">
             <h2 class="logo">
@@ -7,9 +7,49 @@
 
             <ul>
                 <li><a routerLink="/">Products</a></li>
-                <li><a routerLink="/cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
-                <li><a routerLink="/cart"><i class="fa-solid fa-heart"></i></a></li>
+                <li><a routerLink="/cart">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </a>
+                </li>
+                <li>
+                    <a routerLink="/cart">
+                        <i class="fa-solid fa-heart"></i>
+                    </a>
+                </li>
             </ul>
         </div>
+    </div>
+</nav> -->
+
+<nav>
+    <input type="checkbox" id="check">
+                <label for="check" class="checkbtn">
+                    <i class="fas fa-bars"></i>
+                </label>
+    <div class="container">
+        <div class="nav-header">
+            <div class="nav-logo">
+                <h2 class="logo">
+                    DIVA
+                </h2>
+            </div>
+
+
+            
+            <div class="nav-item">
+                
+                <ul>
+                    <li><a routerLink="/">Products</a></li>
+                    <li><a routerLink="/cart">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            
+        </div>
+
+    
     </div>
 </nav>
