--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -125,8 +125,7 @@
           <li class="footer-nav-item flex">
 
             <address class="content">
-              419 State 414 Rte
-              Beaver Dams, New York(NY), 14812, USA
+              419 State 414 Lorem ipsum dolor sit <br> amet consectetur.
             </address>
           </li>
 
