--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -7,13 +7,6 @@
 nav {
     background: linear-gradient(to right , rgb(12, 182, 139) ,$main-color);
     color:white;
-    
-    #check {
-            display: none;
-            }
-            .checkbtn {
-            display: none;
-        }
         
     .nav-header {
         display: flex;
@@ -33,6 +26,27 @@ nav {
             a {
                 @extend %links;
             }
+
+            
          }
+         #cartIcon{
+            position: relative;
+            border-left: 1px solid white;
+            span {
+                position: absolute;
+                top:-10px;
+                right: -3px;
+                background-color: rgb(211, 0, 0);
+                width: 16px;
+                height: 16px;
+                border-radius: 50%;
+                font-size: 12px;
+                font-weight: bold;
+            }
+        }
     }
+}
+
+.belowNav {
+    border-bottom: 1px solid $main-color;
 }
