--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,7 +8,7 @@
                 </h2>
             </div>
 
-            <div class="w-50">
+            <div class="nav-input w-50">
                 <input class="form-control" type="text" placeholder="Enter your product name..">
             </div>
 
@@ -26,8 +26,6 @@
 
             
         </div>
-
-    
     </div>
 </nav>
 
