--- a/src/app/products/components/all-products/all-products.component.html
+++ b/src/app/products/components/all-products/all-products.component.html
@@ -16,7 +16,7 @@
         </aside>
         <div class="all-products w-75 ms-5">
             <div class="row" *ngIf="!isLoading">
-                <div class="col-sm-6 col-md-4 col-xl-4 d-flex g-5" *ngFor="let product of allProducts">
+                <div class="product col-sm-6 col-md-4 col-xl-4 d-flex g-5" *ngFor="let product of allProducts">
                         <app-product class="w-100" data-aos="zoom-in"  [data]="product" (item)="addToCart($event)"></app-product>
                 </div>
             </div>
