--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -7,7 +7,10 @@
 nav {
     background: linear-gradient(to right , rgb(12, 182, 139) ,$main-color);
     color:white;
-        
+    position: fixed;
+    width: 100%;
+    z-index: 9999;
+    display: block;
     .nav-header {
         display: flex;
         align-items: center;
@@ -49,4 +52,24 @@ nav {
 
 .belowNav {
     border-bottom: 1px solid $main-color;
+    // margin-top: 50px;
+}
+
+@media (max-width:768px){
+    .nav-input{
+        display: none ;
+        width: 40% !important;
+        input{
+            font-size: 14px !important;
+            padding: 5px !important;
+        }
+    }
+    .belowNav {
+        .social{
+            display: none !important;
+        }
+        p, select{
+            font-size: 14px !important;
+        }
+    }
 }
